--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -126,8 +126,36 @@
 
   <!-- result grid -->
 
-  <h1>{{query}}</h1>
+  <div class="album py-5 bg-light">
+    <div class="container">
+      <div class="row">
 
+
+	      {% for key, value in result.items() %}
+
+
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title></title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Bild</text></svg>
+            <div class="card-body">
+		    <p class="card-text">{{key}}</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                </div>
+		<small class="text-muted">{{value}}</small>
+              </div>
+            </div>
+          </div>
+        </div>
+
+            {% endfor %}
+
+
+         </div>
+     </div>
+  </div> 
   <!-- /result grid -->
 
 
