--- a/app/static/css/landing-page.css
+++ b/app/static/css/landing-page.css
@@ -5,22 +5,50 @@
  */
 
 body {
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
+a {
+  color: #99803d;
+  font-family: 'Roboto', sans-serif;
+}
+
+i {
+  color: #ff7f00;
+}
+
+
+h1{
+  font-family: 'Raleway', sans-serif;
+},
+h2 {
+  font-family: 'Raleway', sans-serif;
+},
+h3{
+  font-family: 'Raleway', sans-serif;
+},
+h4{
+  font-family: 'Raleway', sans-serif;
+},
+h5{
+  font-family: 'Raleway', sans-serif;
+},
 h6 {
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
 }
 
+/*
+ * Gul-ish #cc9a14
+ * Orange #ff7f00
+ * Guld-gul #99803d
+ */
+
+
+
 header.masthead {
   position: relative;
-  background-color: #343a40;
+  background-color: #cc9a14;
   background: url("../img/bg-masthead.jpg") no-repeat center center;
   background-size: cover;
   padding-top: 8rem;
@@ -29,7 +57,7 @@ header.masthead {
 
 header.masthead .overlay {
   position: absolute;
-  background-color: #212529;
+  background-color: #cc9a14;
   height: 100%;
   width: 100%;
   top: 0;
@@ -72,7 +100,7 @@ header.masthead h1 {
 }
 
 .features-icons .features-icons-item {
-  max-width: 20rem;
+	max-width: 20rem;
 }
 
 .features-icons .features-icons-item .features-icons-icon {
@@ -87,6 +115,10 @@ header.masthead h1 {
   font-size: 5rem;
 }
 
+.d-flex {
+  color: #ff7f00;
+}
+
 .testimonials {
   padding-top: 7rem;
   padding-bottom: 7rem;
@@ -98,13 +130,13 @@ header.masthead h1 {
 
 .testimonials .testimonial-item img {
   max-width: 12rem;
-  -webkit-box-shadow: 0px 5px 5px 0px #adb5bd;
-  box-shadow: 0px 5px 5px 0px #adb5bd;
+  -webkit-box-shadow: 0px 5px 5px 0px #cc9a14;
+  box-shadow: 0px 5px 5px 0px #cc9a14;
 }
 
 .call-to-action {
   position: relative;
-  background-color: #343a40;
+  background-color: #cc9a14;
   background: url("../img/bg-masthead.jpg") no-repeat center center;
   background-size: cover;
   padding-top: 7rem;
@@ -113,7 +145,7 @@ header.masthead h1 {
 
 .call-to-action .overlay {
   position: absolute;
-  background-color: #212529;
+  background-color: #cc9a14;
   height: 100%;
   width: 100%;
   top: 0;
