--- a/app/templates/medborgarforskning.html
+++ b/app/templates/medborgarforskning.html
@@ -70,21 +70,21 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
 
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('http://localhost/static/img/bg-showcase-1.jpg');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('static/img/tree.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>En forskningsmetod!</h2>
           <p class="lead mb-0">Medborgarforskning är en viktig metod för att forskare ska kunna samla in och klassificera... lorem ipsum...läs mer...</p>
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url('http://localhost/static/img/bg-showcase-2.jpg');"></div>
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url('static/img/butterfly.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
           <h2>Påverkar och gör skillnad!</h2>
           <p class="lead mb-0">Hur är luftkvaliteten där du bor? Hur står det till med skogsmiljön? Medborgarforskning kan göra skillnad... läs mer...!</p>
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('http://localhost/static/img/bg-showcase-3.jpg');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('static/img/mountain.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Kan vara ett intressant skolprojekt!</h2>
           <p class="lead mb-0">Runt om i landet bedriver hundratals skolor och tusentals elever medborgarforskning... läs mer...</p>
