added startaprojekt.html and did some css

--- a/app/templates/medborgarforskning.html
+++ b/app/templates/medborgarforskning.html
@@ -11,31 +11,31 @@
   <title>Medborgarforskning.se</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="http://localhost/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="http://localhost/static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link href="http://localhost/static/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
+  <link href="/static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="/static/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
   <!-- Custom styles for this template -->
-  <link href="http://localhost/static/css/landing-page.css" rel="stylesheet">
+  <link href="/static/css/landing-page.css" rel="stylesheet">
 
 </head>
 
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-light bg-light http://localhost/static-top">
+  <nav class="navbar navbar-light bg-light /static-top">
     <div class="container">
       <a class="navbar-brand" href="/">Utforska!</a>
-      <a class="navbar-brand" href="#">Starta projekt!</a>
+      <a class="navbar-brand" href="/startaprojekt">Starta projekt!</a>
       <a class="navbar-brand" href="/medborgarforskning">Vad är medborgarforskning?</a>
       <!-- Ändra width för att ändra loggans storlek -->
-                 <img class="img-fluid" width="200" src="http://localhost/static/img/logga.png" alt="">
+                 <img class="img-fluid" width="200" src="/static/img/logga.png" alt="">
                 
 		 
-		 <form action = "http://localhost/search" method = "POST" id="searchform">
+		 <form action = "/search" method = "POST" id="searchform">
 		 <input type="text" class="form-control form-control-lg" placeholder="Sök efter projekt..." name="searchstring">
 		 </form>
     </div>
@@ -100,21 +100,21 @@
       <div class="row">
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="http://localhost/static/img/testimonials-1.jpg" alt="">
+            <img class="img-fluid rounded-circle mb-3" src="/static/img/testimonials-1.jpg" alt="">
             <h5>Lisa Svensson</h5>
             <p class="font-weight-light mb-0">"Jag är biolog. Medborgare har hjälpt mig samla in massor av fågelobservationer"</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="http://localhost/static/img/testimonials-2.jpg" alt="">
+            <img class="img-fluid rounded-circle mb-3" src="/static/img/testimonials-2.jpg" alt="">
             <h5>Olle Svensson</h5>
             <p class="font-weight-light mb-0">"Jag började mäta luften i mitt kvarter. Jag är medborgarforskare."</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="http://localhost/static/img/testimonials-3.jpg" alt="">
+            <img class="img-fluid rounded-circle mb-3" src="/static/img/testimonials-3.jpg" alt="">
             <h5>Stina Svensson</h5>
             <p class="font-weight-light mb-0">"Jag är lärare i årskurs 5. Vi gjorde medborgarforskning som skolprojekt."</p>
           </div>
