--- a/app/static/css/landing-page.css
+++ b/app/static/css/landing-page.css
@@ -57,17 +57,25 @@ header.masthead {
 
 header.masthead .overlay {
   position: absolute;
-  background-color: #cc9a14;
+  background-color: #ff7f00;
   height: 100%;
   width: 100%;
   top: 0;
   left: 0;
-  opacity: 0.3;
+  opacity: 0.7;
+
 }
 
 header.masthead h1 {
   font-size: 2rem;
 }
+
+header.masthead h2 {
+  font-size: 2.5rem;
+}
+
+
+
 
 @media (min-width: 768px) {
   header.masthead {
