--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,31 +11,31 @@
   <title>Medborgarforskning.se</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="http://localhost/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="http://localhost/static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link href="http://localhost/static/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
+  <link href="/static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="/static/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
   <!-- Custom styles for this template -->
-  <link href="http://localhost/static/css/landing-page.css" rel="stylesheet">
+  <link href="/static/css/landing-page.css" rel="stylesheet">
 
 </head>
 
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-light bg-light http://localhost/static-top">
+  <nav class="navbar navbar-light bg-light /static-top">
     <div class="container">
       <a class="navbar-brand" href="/">Utforska!</a>
-      <a class="navbar-brand" href="#">Starta projekt!</a>
+      <a class="navbar-brand" href="/startaprojekt">Starta projekt!</a>
       <a class="navbar-brand" href="/medborgarforskning">Vad är medborgarforskning?</a>
       <!-- Ändra width för att ändra loggans storlek -->
-                 <img class="img-fluid" width="200" src="http://localhost/static/img/logga.png" alt="">
+                 <img class="img-fluid" width="200" src="/static/img/logga.png" alt="">
                 
 		 
-		 <form action = "http://localhost/search" method = "POST" id="searchform">
+		 <form action = "/search" method = "POST" id="searchform">
 		 <input type="text" class="form-control form-control-lg" placeholder="Sök efter projekt..." name="searchstring">
 		 </form>
     </div>
@@ -58,7 +58,7 @@
 					Visa 
 
     				<div class="col-auto">
-      					<select class="form-control" id="research_area" name="typeofproject" onchange="this.form.submit();">
+      					<select class="form-control-lg" id="research_area" name="typeofproject" onchange="this.form.submit();">
 					        
 						<!-- gets the default value from Flask -->
                                         	<option value="{{selection}}" selected="selected">{{selection}}</option>
@@ -77,7 +77,7 @@
 					projekt i 
     
    				 <div class="col-auto">
-      					<select class="form-control" id="location_area" name="locationofproject" onchange="this.form.submit();">
+      					<select class="form-control-lg" id="location_area" name="locationofproject" onchange="this.form.submit();">
                                                 
 						<!-- gets the default value from Flask -->
 						<option value="{{selectionloc}}" selected="selected">{{selectionloc}}</option>
