added links to CS project webpages in renderresults() and index.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -177,8 +177,8 @@
 		    <p class="card-text">{{key}}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+			<button type="button" class="btn btn-sm btn-outline-secondary"><a href="{{value[2]}}">Hemsida</a></button>
+			<!-- <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>-->
                 </div>
 		<small class="text-muted">{{value[0]}}</small>
               </div>
