--- a/app/templates/startaprojekt.html
+++ b/app/templates/startaprojekt.html
@@ -28,11 +28,10 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light /static-top">
     <div class="container">
-      <a class="navbar-brand" href="/">Utforska!</a>
-      <a class="navbar-brand" href="/startaprojekt">Starta projekt!</a>
+      <a href="/"><img class="img-fluid" width="200" src="/static/img/logga.png" alt=""></a>
+      <a class="navbar-brand" href="/">Utforska</a>
+      <a class="navbar-brand" href="/startaprojekt">Starta projekt</a>
       <a class="navbar-brand" href="/medborgarforskning">Vad är medborgarforskning?</a>
-      <!-- Ändra width för att ändra loggans storlek -->
-                 <img class="img-fluid" width="200" src="/static/img/logga.png" alt="">
                 
 		 
 		 <form action = "/search" method = "POST" id="searchform">
@@ -49,7 +48,7 @@
         <div class="col-xl-9 mx-auto">
           
    <h2 class="mb-5">
-	   Starta ett medborgarforskningsprojekt!
+	   Starta ett medborgarforskningsprojekt
                 </h2>
 
         </div>
